updated welcome message

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Display Selected Date -->
         <p id="selectedDate" style="display: none;"></p>
 
-        <p id="timer">Counting...</p>
+        <p id="timer">Focus time: Let’s make it count!</p>
         <button id="resetButton">Fail</button>
     </div>
     <script src="script.js"></script>
